# builtin-cabinet-maker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.backend  README.md  cabinet_json.json  compose.yml  corner-builtin-example.json  example-cabinet.json  full-featured-example.json  main.py  nginx.conf  pyproject.toml
assets/: cabinet_assembly.md  cabinet_bom.txt  cabinet_dxf.dxf  cabinet_json.json
docs/futures/: .refinement-tracking-frd-01-configuration-schema.md  .refinement-tracking-frd-02-room-wall-geometry.md  .refinement-tracking-frd-03-obstacle-avoidance.md  .refinement-tracking-frd-04-variable-sections.md  builtin-cabinet-shelving-generator.md  frd-01-configuration-schema.md  frd-02-room-wall-geometry.md  frd-03-obstacle-avoidance.md  frd-04-variable-sections.md  frd-05-component-registry.md  frd-06-shelf-component.md  frd-07-door-component.md  frd-08-drawer-component.md  frd-09-cubby-grid.md  frd-10-corner-cabinets.md  frd-11-advanced-geometry.md  frd-12-decorative-elements.md  frd-13-bin-packing.md  frd-14-woodworking-intelligence.md  frd-15-infrastructure.md  frd-16-output-formats.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.ts
src/cabinets/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: test_bin_packing_integration.py  test_command_strategies.py  test_component_generation.py  test_config_sections.py  test_decorative_integration.py  test_desk_integration.py  test_entertainment_center_integration.py  test_frd11_advanced_geometry.py  test_infrastructure_integration.py  test_installation_integration.py  test_llm_assembly_integration.py  test_obstacle_generation.py  test_output_formats.py  test_room_generation.py  test_safety_integration.py  test_templates_command.py  test_validate_command.py  test_validator_registry.py  test_woodworking_integration.py  test_zone_stack_integration.py
tests/unit/: test_accessibility.py  test_anti_tip.py  test_assembly_exporter.py  test_assembly_llm_config.py  test_bay_alcove_layout_service.py  test_bay_alcove_schema.py  test_bay_alcove_value_objects.py  test_bin_packing.py  test_bom_generator.py  test_clearance_checking.py  test_cli_multiformat.py  test_cli_safety.py  (+51 more)
(+291 files in other folders)
